<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.onboarding.screen.FirstScreenFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="300dp"
        android:layout_height="240dp"
        android:src="@drawable/amico"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="80dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/title1"
        app:layout_constraintTop_toBottomOf="@id/imageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="48dp"
        android:layout_marginHorizontal="32dp"
        android:text="@string/title1"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textAlignment="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/subtitle1"
        android:text="@string/subtitle1"
        android:textColor="@color/gray_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title1"
        android:layout_marginHorizontal="60dp"
        android:layout_marginTop="32dp"
        android:textAlignment="center"/>

    <com.dicoding.literalinkapps.ui.customview.MyButton
        android:id="@+id/next"
        android:layout_width="120dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="64dp"
        android:text="@string/button_next"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.20"
        app:layout_constraintStart_toStartOf="@+id/guideline_horizontal_center"
        app:layout_goneMarginBottom="54dp" />

    <TextView
        android:id="@+id/skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:clickable="true"
        android:focusable="true"
        android:paddingHorizontal="12dp"
        android:paddingVertical="8dp"
        android:text="@string/button_skip"
        app:layout_constraintBottom_toBottomOf="@+id/next"
        app:layout_constraintEnd_toStartOf="@id/guideline_horizontal_center"
        app:layout_constraintHorizontal_bias="0.70"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/next" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal_center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>